tests/rosetta/out/C/bitmap-read-a-ppm-file.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:08Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:08Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
typedef struct pixel_t pixel_t;
typedef struct bitmap_t bitmap_t;

typedef struct pixel_t {
  int R;
  int G;
  int B;
} pixel_t;
typedef struct {
  int len;
  pixel_t *data;
} pixel_list_t;
pixel_list_t create_pixel_list(int len) {
  pixel_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(pixel_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct bitmap_t {
  int w;
  int h;
  int max;
  list_int data;
} bitmap_t;
typedef struct {
  int len;
  bitmap_t *data;
} bitmap_list_t;
bitmap_list_t create_bitmap_list(int len) {
  bitmap_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(bitmap_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

bitmap_t newBitmap(int w, int h, int max) {
  int y = 0;
  while (y < h) {
    pixel_list_t row = {0, NULL};
    int x = 0;
    while (x < w) {
      pixel_list_t tmp1 = create_pixel_list(row.len + 1);
      for (int i2 = 0; i2 < row.len; i2++) {
        tmp1.data[i2] = row.data[i2];
      }
      tmp1.data[row.len] = (pixel_t){.r = 0, .g = 0, .b = 0};
      tmp1.len = row.len + 1;
      row = tmp1;
      x = x + 1;
    }
    rows = 0;
    y = y + 1;
  }
  return (bitmap_t){.w = w, .h = h, .max = max, .data = rows};
}

int setPx(bitmap_t *b, int x, int y, pixel_t *p) {
  int rows = b->data;
  pixel_list_t row = rows.data[y];
  row.data[x] = p;
  rows.data[y] = row;
  b->data = rows;
}

pixel_t getPx(bitmap_t *b, int x, int y) { return b->data.data[y].data[x]; }

list_string splitLines(char *s) {
  list_string out = list_string_create(0);
  char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    char *ch = substr(s, i, i + 1);
    if ((strcmp(ch, "\n") == 0)) {
      list_string tmp3 = list_string_create(1);
      tmp3.data[0] = cur;
      list_string tmp4 = concat_list_string(out, tmp3);
      out = tmp4;
      cur = "";
    } else {
      char *tmp5 = concat_string(cur, ch);
      cur = tmp5;
    }
    i = i + 1;
  }
  list_string tmp6 = list_string_create(1);
  tmp6.data[0] = cur;
  list_string tmp7 = concat_list_string(out, tmp6);
  out = tmp7;
  return out;
}

list_string splitWS(char *s) {
  list_string out = list_string_create(0);
  char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    char *ch = substr(s, i, i + 1);
    if ((strcmp(ch, " ") == 0) || ch == "\t" || ch == "\r" || ch == "\n") {
      if (strlen(cur) > 0) {
        list_string tmp8 = list_string_create(1);
        tmp8.data[0] = cur;
        list_string tmp9 = concat_list_string(out, tmp8);
        out = tmp9;
        cur = "";
      }
    } else {
      char *tmp10 = concat_string(cur, ch);
      cur = tmp10;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp11 = list_string_create(1);
    tmp11.data[0] = cur;
    list_string tmp12 = concat_list_string(out, tmp11);
    out = tmp12;
  }
  return out;
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp13 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp13 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int tmp14 = map_string_int_create(10);
  map_string_int_put(&tmp14, "0", 0);
  map_string_int_put(&tmp14, "1", 1);
  map_string_int_put(&tmp14, "2", 2);
  map_string_int_put(&tmp14, "3", 3);
  map_string_int_put(&tmp14, "4", 4);
  map_string_int_put(&tmp14, "5", 5);
  map_string_int_put(&tmp14, "6", 6);
  map_string_int_put(&tmp14, "7", 7);
  map_string_int_put(&tmp14, "8", 8);
  map_string_int_put(&tmp14, "9", 9);
  map_string_int digits = tmp14;
  while ((i < str.len)) {
    char *tmp15 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp15);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

list_string tokenize(char *s) {
  list_string lines = splitLines(s);
  list_string toks = list_string_create(0);
  int i = 0;
  while (i < lines.len) {
    char *line = lines.data[i];
    if (strlen(line) > 0 && substr(line, 0, 1) == "#") {
      i = i + 1;
      continue;
    }
    list_string parts = splitWS(line);
    int j = 0;
    while (j < parts.len) {
      list_string tmp16 = list_string_create(1);
      tmp16.data[0] = parts.data[j];
      list_string tmp17 = concat_list_string(toks, tmp16);
      toks = tmp17;
      j = j + 1;
    }
    i = i + 1;
  }
  return toks;
}

bitmap_t readP3(char *text) {
  list_string toks = tokenize(text);
  if (toks.len < 4) {
    return newBitmap(0, 0, 0);
  }
  if ((strcmp(toks.data[0], "P3") != 0)) {
    return newBitmap(0, 0, 0);
  }
  int w = parseIntStr(toks.data[1]);
  int h = parseIntStr(toks.data[2]);
  int maxv = parseIntStr(toks.data[3]);
  int idx = 4;
  bitmap_t bm = newBitmap(w, h, maxv);
  int y = h - 1;
  while (y >= 0) {
    int x = 0;
    while (x < w) {
      int r = parseIntStr(toks.data[idx]);
      int g = parseIntStr(toks.data[idx + 1]);
      int b = parseIntStr(toks.data[idx + 2]);
      setPx(&bm, x, y, &(pixel_t){.r = r, .g = g, .b = b});
      idx = idx + 3;
      x = x + 1;
    }
    y = y - 1;
  }
  return bm;
}

int toGrey(bitmap_t *b) {
  int h = b->h;
  int w = b->w;
  int m = 0;
  int y = 0;
  while (y < h) {
    int x = 0;
    while (x < w) {
      pixel_t p = getPx(&b, x, y);
      double l = (p.r * 2126 + p.g * 7152 + p.b * 722) / 10000;
      if (l > b->max) {
        l = b->max;
      }
      setPx(&b, x, y, (pixel_t){.r = l, .g = l, .b = l});
      if (l > m) {
        m = l;
      }
      x = x + 1;
    }
    y = y + 1;
  }
  b->max = m;
}

char *pad(int n, int w) {
  char *tmp18 = _str(n);
  char *s = tmp18;
  while (strlen(s) < w) {
    char *tmp19 = concat_string(" ", s);
    s = tmp19;
  }
  return s;
}

char *writeP3(bitmap_t *b) {
  int h = b->h;
  int w = b->w;
  int max = b->max;
  char *tmp20 = _str(max);
  int digits = strlen(tmp20);
  char *tmp21 = _str(w);
  char *tmp22 =
      concat_string("P3\n# generated from Bitmap.writeppmp3\n", tmp21);
  char *tmp23 = concat_string(tmp22, " ");
  char *tmp24 = _str(h);
  char *tmp25 = concat_string(tmp23, tmp24);
  char *tmp26 = concat_string(tmp25, "\n");
  char *tmp27 = _str(max);
  char *tmp28 = concat_string(tmp26, tmp27);
  char *tmp29 = concat_string(tmp28, "\n");
  char *out = tmp29;
  int y = h - 1;
  while (y >= 0) {
    char *line = "";
    int x = 0;
    while (x < w) {
      pixel_t p = getPx(&b, x, y);
      char *tmp30 = concat_string(line, "   ");
      char *tmp31 = concat_string(tmp30, pad(p.r, digits));
      char *tmp32 = concat_string(tmp31, " ");
      char *tmp33 = concat_string(tmp32, pad(p.g, digits));
      char *tmp34 = concat_string(tmp33, " ");
      char *tmp35 = concat_string(tmp34, pad(p.b, digits));
      line = tmp35;
      x = x + 1;
    }
    char *tmp36 = concat_string(out, line);
    char *tmp37 = concat_string(tmp36, "\n");
    out = tmp37;
    y = y - 1;
  }
  return out;
}

int _mochi_main() {
  char *tmp38 = concat_string("P3\n", "# feep.ppm\n");
  char *tmp39 = concat_string(tmp38, "4 4\n");
  char *tmp40 = concat_string(tmp39, "15\n");
  char *tmp41 =
      concat_string(tmp40, " 0  0  0    0  0  0    0  0  0   15  0 15\n");
  char *tmp42 =
      concat_string(tmp41, " 0  0  0    0 15  7    0  0  0    0  0  0\n");
  char *tmp43 =
      concat_string(tmp42, " 0  0  0    0  0  0    0 15  7    0  0  0\n");
  char *tmp44 =
      concat_string(tmp43, "15  0 15    0  0  0    0  0  0    0  0  0\n");
  char *ppmtxt = tmp44;
  printf("Original Colour PPM file\n");
  printf("%s\n", ppmtxt);
  bitmap_t bm = readP3(ppmtxt);
  printf("Grey PPM:\n");
  toGrey(&bm);
  char *out = writeP3(&bm);
  printf("%s\n", out);
  return 0;
}
int main() { return _mochi_main(); }
